updated docs concerning globals

--- a/81-coffee.html
+++ b/81-coffee.html
@@ -62,6 +62,7 @@
 	<p>If null is returned, either by itself or as an element of the array, no
 	      message is passed on.</p>
 	<p>See the <a target="_new" href="http://nodered.org/docs/writing-functions.html">online documentation</a> for more help.</p>
+  <p><b>NOTE:</b> <code>context.global.foo</code> equals <code>@context.global.foo</code> in coffeescript</p>
 	      
 </script>
 
