--- a/81-coffee.html
+++ b/81-coffee.html
@@ -61,7 +61,12 @@
 	      messages are sent to the corresponding output.</p>
 	<p>If null is returned, either by itself or as an element of the array, no
 	      message is passed on.</p>
-	<p>See the <a target="_new" href="http://nodered.org/docs/writing-functions.html">online documentation</a> for more help.</p>
+    <p>See the <a target="_new" href="http://nodered.org/docs/writing-functions.html">online documentation</a> for more help.</p>
+	<p>For flexibility use:</p>
+  <ul>
+    <li><code>return msg</code> to call the next node <b>synchronous</b></li> 
+    <li><code>cb(msg)</code> to call the next node <b>asynchronous</b><li> 
+  </ul>
   <p><b>NOTE:</b> <code>context.global.foo</code> equals <code>@context.global.foo</code> in coffeescript</p>
 	      
 </script>
