--- a/81-coffee.html
+++ b/81-coffee.html
@@ -67,7 +67,8 @@
     <li><code>return msg</code> to call the next node <b>synchronous</b></li> 
     <li><code>cb(msg)</code> to call the next node <b>asynchronous</b><li> 
   </ul>
-  <p><b>NOTE:</b> <code>context.global.foo</code> equals <code>@context.global.foo</code> in coffeescript</p>
+  <p><b>NOTE #1:</b> <code>context.global.foo</code> equals <code>@context.global.foo</code> in coffeescript</p>
+  <p><b>NOTE #2:</b> coffeescript uses tabs or 2 spaces to indent (dont use both, it will result in voodoo behaviour)</p>
 	      
 </script>
 
